# pythonProjectSkypro

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: masks.py  processing.py  requirements.txt  widget.py
tests/: test_masks.py  test_processing.py  test_wiget.py
