[project]
name = "pythonprojectskypro"
version = "0.1.0"
description = ""
authors = [
    {name = "Koss",email = "kostuavavkon@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
